tools/tests/errors/surf_lib_11.experr
invalid regex
unterminated character class
